# Nonprofit_grants

./: .gitignore  LICENSE  README.md  pyproject.toml
src/donor990/: __init__.py  api.py  cli.py  irs.py  models.py  parser.py
src/donor990/prospector/: __init__.py  core.py  models.py  ntee_codes.py
tests/: __init__.py  test_models.py
