[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "donor990"
version = "0.1.0"
description = "Extract grant recipients from IRS 990 filings"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = [
    "nonprofit",
    "irs",
    "990",
    "grants",
    "philanthropy",
    "tax",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "requests>=2.28.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
]

[project.scripts]
donor990 = "donor990.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/donor990"
Documentation = "https://github.com/yourusername/donor990#readme"
Repository = "https://github.com/yourusername/donor990.git"
Issues = "https://github.com/yourusername/donor990/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/donor990"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
