[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "donor990"
version = "0.1.0"
description = "Nonprofit grant analysis - extract grant recipients and find donor prospects"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Carson West", email = "firstwestventures@gmail.com" }
]
keywords = [
    "nonprofit",
    "irs",
    "990",
    "grants",
    "philanthropy",
    "tax",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "requests>=2.28.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
prospect = [
    "aiohttp>=3.8.0",
    "beautifulsoup4>=4.11.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
]
all = [
    "donor990[prospect]",
    "donor990[dev]",
]

[project.scripts]
donor990 = "donor990.cli:main"

[project.urls]
Homepage = "https://github.com/cwestie27/Nonprofit_grants"
Documentation = "https://github.com/cwestie27/Nonprofit_grants#readme"
Repository = "https://github.com/cwestie27/Nonprofit_grants.git"
Issues = "https://github.com/cwestie27/Nonprofit_grants/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/donor990"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
